# mock-interview-dna

./: .gitignore  02_kaggle_plan.md  03_kaggle_specs.md  EMAIL.md  MY_NOTES.md  PITCH.md  README.md  SHINY_DASHBOARD_SETUP.md  WORK.md  kaggle_ideas.md  kaggle_url.md  main.py  pyproject.toml  requirements.txt
output/PROJECT_01/: dirty.csv  report.html  summary_stats.csv
output/PROJECT_01/insights/: insights.html  insights.md  insights_01_age_distribution.md  insights_02_lead_days_distribution.md  insights_03_noshow_overall.md  insights_04_binary_flags_prevalence.md  insights_05_gender_split.md  insights_06_top20_neighbourhoods.md  insights_07_appointments_by_weekday.md  insights_08_appointments_over_time.md  insights_09_noshow_by_gender.md  insights_10_noshow_by_age_group.md  insights_11_noshow_by_lead_days.md  insights_12_noshow_by_sms.md  insights_13_noshow_by_conditions.md  insights_14_noshow_by_weekday.md  insights_15_noshow_by_neighbourhood.md  insights_16_noshow_by_month.md  insights_17_repeat_patient_noshow.md  insights_18_correlation_heatmap.md  insights_19_sms_paradox.md  insights_20_age_condition_heatmap.md  insights_21_neighbourhood_inequality.md  insights_22_same_day_profile.md  insights_23_scholarship_analysis.md  insights_24_patient_appointment_counts.md  insights_25_weekly_noshow_timeseries.md
src/: dashboard.py  phase0_etl.py  phase1_univariate.py  phase2_bivariate.py  phase3_multivariate.py  phase4_report.py
