[project]
name = "neuroblastoma-genomic-analysis"
version = "0.1.0"
description = "Multi-phase oncology data science project predicting neuroblastoma patient outcomes from gene expression and clinical data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "faicons>=0.2.2",
    "fpdf2>=2.8.7",
    "jinja2>=3.1.6",
    "kaleido>=1.2.0",
    "lifelines>=0.30.0",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "rich>=14.3.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.1",
    "statsmodels>=0.14.6",
    "uvicorn>=0.41.0",
    "xgboost>=2.1.0",
]
